[gd_scene load_steps=14 format=3 uid="uid://sgkqe5oajc3t"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_losu8"]
[ext_resource type="Texture2D" uid="uid://dnnfthah2vpv7" path="res://assets/star.png" id="2_edjj6"]
[ext_resource type="Script" path="res://scripts/select_level.gd" id="3_chc5p"]
[ext_resource type="PackedScene" uid="uid://crri06jkingmg" path="res://Planet.tscn" id="3_g0gaf"]
[ext_resource type="PackedScene" uid="uid://ca7vc7rpbqikh" path="res://Player.tscn" id="3_lc0l7"]
[ext_resource type="PackedScene" uid="uid://bkb08kejt34ex" path="res://Explosion.tscn" id="5_u06ni"]
[ext_resource type="Texture2D" uid="uid://62yvt88bs87v" path="res://icon.svg" id="7_b5yql"]
[ext_resource type="Script" path="res://loading_icon.gd" id="8_vjscg"]

[sub_resource type="Gradient" id="Gradient_imr1o"]
offsets = PackedFloat32Array(0, 0.336788, 0.683938, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vstef"]
gradient = SubResource("Gradient_imr1o")

[sub_resource type="Curve" id="Curve_d1lej"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.742081, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.472527), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_y4stg"]
curve = SubResource("Curve_d1lej")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bx3ng"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(2048, 1200, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_curve = SubResource("CurveTexture_y4stg")
color_ramp = SubResource("GradientTexture1D_vstef")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_losu8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(576, 320)
amount = 256
process_material = SubResource("ParticleProcessMaterial_bx3ng")
texture = ExtResource("2_edjj6")
lifetime = 5.0

[node name="CreditsMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
offset_top = 297.0
offset_right = -173.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Back" type="Button" parent="CreditsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="CreditKyrill" type="Label" parent="CreditsMenu"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Kyrill"

[node name="CreditMads" type="Label" parent="CreditsMenu"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Mads"

[node name="CreditMartin" type="Label" parent="CreditsMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "Martin"

[node name="CreditMarkus" type="Label" parent="CreditsMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Markus"

[node name="StartMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -32.5
offset_right = 59.0
offset_bottom = 134.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Start" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="LevelSelect" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select level"

[node name="Credits" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Quit" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="LevelSelect" type="Control" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.5
offset_top = -75.0
offset_right = 295.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="LevelSelect"]
offset_left = 254.5
offset_top = 157.0
offset_right = 336.5
offset_bottom = 210.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="VBoxContainer" type="Control" parent="LevelSelect"]
layout_mode = 2
anchors_preset = 0
offset_top = 43.0
offset_right = 591.0
offset_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 8
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="LevelSelect/VBoxContainer"]
layout_mode = 2
offset_right = 115.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Level 1"
script = ExtResource("3_chc5p")
level = 1

[node name="Button2" type="Button" parent="LevelSelect/VBoxContainer"]
layout_mode = 2
offset_left = 119.0
offset_right = 234.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Level 2"
script = ExtResource("3_chc5p")
level = 2

[node name="Button3" type="Button" parent="LevelSelect/VBoxContainer"]
layout_mode = 2
offset_left = 238.0
offset_right = 353.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Level 3"
script = ExtResource("3_chc5p")
level = 3

[node name="Button4" type="Button" parent="LevelSelect/VBoxContainer"]
layout_mode = 2
offset_left = 357.0
offset_right = 472.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Level 4"
script = ExtResource("3_chc5p")
level = 4

[node name="Button5" type="Button" parent="LevelSelect/VBoxContainer"]
layout_mode = 2
offset_left = 476.0
offset_right = 591.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Level 5"
script = ExtResource("3_chc5p")
level = 4

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -266.0
offset_top = 84.0
offset_right = 266.0
offset_bottom = 173.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Down with Earth!"

[node name="Player" parent="." instance=ExtResource("3_lc0l7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.50367, 0, 0)
isForLoading = true

[node name="Planet" parent="." instance=ExtResource("3_g0gaf")]

[node name="Explosion" parent="." instance=ExtResource("5_u06ni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.41962, 0, 1.80899)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(22, 24)
scale = Vector2(0.213115, 0.213115)
texture = ExtResource("7_b5yql")
script = ExtResource("8_vjscg")

[connection signal="pressed" from="CreditsMenu/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="LevelSelect/Back" to="." method="_on_back_pressed"]
